--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,60 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  color: #fff;
+  background-color: #4f4d31;
+  background: url("./assets/img/background.jpg");
+  background-position: center;
+  background-repeat: repeat-y;
+  background-size: cover;
+}
+
+body * {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+main {
+  width: 60%;
+  margin: 0 auto;
+  margin-top: 5em;
+  background-color: rgba(51, 51, 51, 0.7);
+  border-radius: 2em 2em 0 0;
+  padding: 1em 2em;
+  min-height: 100%;
+  box-shadow: 0 0 3px #aeb132;
+}
+
+// scrollbar
+body::-webkit-scrollbar {
+  width: 9px;
+}
+
+body::-webkit-scrollbar-track {
+  background: #cecd51;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #aeb132;
+  border-radius: 6px;
+  border: 2px solid #4f4d31;
+}
+
+@media only screen and (max-width: 1200px) {
+  main {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  main {
+    width: 95%;
+    padding: 15px;
+  }
+}
